refactor to unit tests